initial updates for 2020

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-     <title>Bay Area Robotics Symposium 2019</title>
+     <title>Bay Area Robotics Symposium 2020</title>
 
     <!-- web-fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,500' rel='stylesheet' type='text/css'>
@@ -92,9 +92,9 @@ tr:nth-child(even) {
 	
     <div class="jumbotron text-center">
         <div class="content">
-            <div class="event-date"><strong data_temp_dwid="1">Nov 15, 2019, University of California, Berkeley, International House.</strong></div>
+            <div class="event-date"><strong data_temp_dwid="1">Nov 20, 2020, <span style="text-decoration: line-through;">Stanford University<span>, Virtual Event.</strong></div>
             <h1>Bay Area Robotics Symposium</h1>
-			<a class="registration" href="https://www.eventbrite.com/e/bay-area-robotics-symposium-2019-tickets-73593069853"><button type="button" class="btn btn-default btn-lg">Registration</button></a>
+			<!--<a class="registration" href="https://www.eventbrite.com/e/bay-area-robotics-symposium-2019-tickets-73593069853"><button type="button" class="btn btn-default btn-lg">Registration</button></a>-->
         </div>
     </div>	
 </div>
@@ -108,7 +108,8 @@ tr:nth-child(even) {
     <div class="row">
       <div class="col-md-12">
         <h2>Registration</h2>
-        <p class="lead">Tickets can be bought <a href="https://www.eventbrite.com/e/bay-area-robotics-symposium-2019-tickets-73593069853"><u>here</u></a>.</p>
+        Registration will open soon.
+        <!--<p class="lead">Tickets can be bought <a href="#"><u>here</u></a>.</p>-->
       </div>
     </div>
   </div>
@@ -121,15 +122,15 @@ tr:nth-child(even) {
         <div class="col-md-10">
           <h2 id="scroll_about">About</h2>
 			
-          <p class="lead">The 2019 Bay Area Robotics Symposium aims to bring together roboticists from the Bay Area. The program will consist of a mix of faculty, student and industry presentations. For more details, see the event <a class="page-scroll" href="#section-schedule">schedule</a>.<br>
+          <p class="lead">The 2020 Bay Area Robotics Symposium aims to bring together roboticists from the Bay Area. The program will consist of a mix of faculty, student and industry presentations. Stay tuned for more details.<!--For more details, see the event <a class="page-scroll" href="#section-schedule">schedule</a>.<br>-->
           </p>
           <p class="lead"> <strong>Faculty Organizers:</strong>&nbsp;</p>
-          <p class="lead"><a class="page-scroll" href="#section-contact">Mark Mueller</a> (UC Berkeley) and <a class="page-scroll" href="#section-contact">Dorsa Sadigh</a> (Stanford)<strong><br>
+          <p class="lead"><a class="page-scroll" href="#section-contact">Dorsa Sadigh</a> (Stanford) and <a class="page-scroll" href="#section-contact">Mark Mueller</a> (UC Berkeley)<strong><br>
           </strong></p>
           <p class="lead"><strong>Sponsors:</strong></p>
 		
 		
-				<div class="col-md-12">
+				<!--<div class="col-md-12">
 				<p class="lead">Gold Sponsors:</p>
 				<a href="https://intuitive.com/"><img src="./img/intuitive.png" width="320" height="120" align="center"></a>
 				</div>	
@@ -152,13 +153,13 @@ tr:nth-child(even) {
 				<a href="http://research.baidu.com/" ping="/url?sa=t&amp;source=web&amp;rct=j&amp;url=http://research.baidu.com/&amp;ved=2ahUKEwjqxMPJvMTlAhVDqp4KHZ92CwkQFjAAegQIBhAC"><img src="./img/Baidu.svg" width="240" height="70" align="center"></a>
 				<a href="https://skydio.com/"><img src="./img/skydio.png" width="222" height="60" align="center"></a><br>
 				<p class="lead"><br/>If you are interested in sponsoring BARS 2019, please contact the local organizer, <a class="page-scroll" href="#section-contact">Mark Mueller</a>.</p>	
-				</div>
+				</div>-->
 			   
 			    
 			
 			
-<!--		  <p class="lead">TBA</p>-->
-<!--		  <p class="lead">You can find our current list of sponsors <a href="#section-sponsor">here</a>.</p>-->
+              <p class="lead">TBA. If you are interested in sponsoring BARS 2020, please contact the local organizer, <a class="page-scroll" href="#section-contact">Dorsa Sadigh</a>.</p>
+              <!--<p class="lead">You can find our current list of sponsors <a href="#section-sponsor">here</a>.</p>-->
 
 </div>
 </div>
@@ -169,10 +170,10 @@ tr:nth-child(even) {
       <div class="row">
         <div class="col-md-10">
           <h2 id="scroll_venue">Venue</h2>
-		  <p class="lead">The event will be held on the campus of UC Berkeley at International House, 2299 Piedmont Avenue, Berkeley, CA.</p>
+		  <p class="lead">The event will be held virtually. More details will be announced soon.</p>
 			
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3149.603775631235!2d-122.2539972494074!3d37.86956047964294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857c3044c08169%3A0xd1060f2f482f3b62!2sInternational%20House!5e0!3m2!1sen!2sus!4v1568421704694!5m2!1sen!2sus" width="600" height="600" frameborder="0" class="map" style="border:0;" allowfullscreen=""></iframe>
-		  <p class="lead">Details about transit, directions and parking can be found <a href="http://ihouse.berkeley.edu/about/location.php" class="hyperlink">here</a>.</p>
+          <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3149.603775631235!2d-122.2539972494074!3d37.86956047964294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857c3044c08169%3A0xd1060f2f482f3b62!2sInternational%20House!5e0!3m2!1sen!2sus!4v1568421704694!5m2!1sen!2sus" width="600" height="600" frameborder="0" class="map" style="border:0;" allowfullscreen=""></iframe>
+		  <p class="lead">Details about transit, directions and parking can be found <a href="http://ihouse.berkeley.edu/about/location.php" class="hyperlink">here</a>.</p>-->
       </div>
   </div>
 </div>  
@@ -182,8 +183,9 @@ tr:nth-child(even) {
   <section id="section-schedule" class="section-wrapper">
     <div class="container">
 	<h2>Schedule</h2>
-	<p class="lead">The tentative event schedule is as below.</p>
-      <div class="row">
+    <p class="lead">TBA</p>
+	<!--<p class="lead">The tentative event schedule is as below.</p>
+      <!--<div class="row">
         <div class="col-md-10">
 		
           <div class="section-title">
@@ -260,7 +262,7 @@ tr:nth-child(even) {
 			
 			
         </div>
-      </div>
+      </div>-->
     </div>
   </section>
 
@@ -515,11 +517,11 @@ tr:nth-child(even) {
       <div class="col-md-12">
         <h2>Contact</h2>
         <p class="lead"><strong>Symposium organizers:</strong>&nbsp;</p>
+        <p class="lead"><u><a href="https://dorsa.fyi/contact/">Dorsa Sadigh</a></u>, dorsa@cs.stanford.edu<br>
         <p class="lead"><a href="https://hiperlab.berkeley.edu/members/mark-w-mueller/"><u>Mark Mueller</u></a>, mwm@berkeley.edu<br></p>
-		  <p class="lead"><u><a href="https://dorsa.fyi/contact/">Dorsa Sadigh</a></u>, dorsa@cs.stanford.edu<br>
         </p>
-        <p class="lead"><strong>Web master:</strong></p>
-        <p class="lead"><u><a href="https://hiperlab.berkeley.edu/members/clark-zha/">Clark Zha</u></a>, clark.zha@berkeley.edu</p>
+        <p class="lead"><strong>Webmaster:</strong></p>
+        <p class="lead"><u><a href="http://stanford.edu/~ebiyik/">Erdem B&#305;y&#305;k</u></a>, ebiyik@stanford.edu</p>
       </div>
       <div class="col-md-4"> </div>
     </div>
