typo fix and logo update

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ tr:nth-child(even) {
 	
     <div class="jumbotron text-center">
         <div class="content">
-            <div class="event-date"><strong data_temp_dwid="1">Nov 20, 2020, <span style="text-decoration: line-through;">Stanford University<span>, Virtual Event.</strong></div>
+            <div class="event-date"><strong data_temp_dwid="1">Nov 20, 2020, <span style="text-decoration: line-through;">Stanford University</span>, Virtual Event.</strong></div>
             <h1>Bay Area Robotics Symposium</h1>
 			<!--<a class="registration" href="https://www.eventbrite.com/e/bay-area-robotics-symposium-2019-tickets-73593069853"><button type="button" class="btn btn-default btn-lg">Registration</button></a>-->
         </div>
