red sky? and Rodney Brooks

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ tr:nth-child(even) {
 				  
                 <tr>
                 <td>11:30-12:00</td>
-                <td colspan="2"> Keynote</td>
+                <td colspan="2"> Keynote by <a href="https://people.csail.mit.edu/brooks/">Rodney Brooks</a></td>
                 </tr>
   	
                 <tr>
@@ -241,7 +241,7 @@ tr:nth-child(even) {
             </table>
 </div>
 		
-		<!--<p>Invited speakers: Stuart Russel and Alison Gopnik.</p>
+		<!--<p>Keynote speaker: Rodney Brooks.</p>
 		<p>The tentative list of speakers for each talk session is:</p>
 		<p>Faculty talks #1 (09:00 -- 10:00): Mark Mueller, Dorsa Sadigh, Kris Pister, Zac Manchester, Hannah Stuart, Marco Pavone, Sergey Levine, Koushil Sreenath, Alexandre Bayen.</p>
 		<p>Faculty talks #2 (13:00 -- 14:00): Karen Liu, Anca Dragan, Monroe Kennedy, Ron Fearing, Jeannette Bohg, Sean Follmer, Mac Schwager, Homayoon Kazerooni, Ken Goldberg.</p>
