schedule update -- Karen Liu

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ tr:nth-child(even) {
 </div>
 		
 		<p>The tentative list of speakers for each talk session is:</p>
-		<p>Faculty talks #1 (08:00 -- 09:00): Koushil Sreenath, Marco Pavone, Monroe Kennedy, Allison Okamura, Ken Goldberg, Chelsea Finn, Sergey Levine, Pieter Abbeel, Karen Liu.</p>
+		<p>Faculty talks #1 (08:00 -- 09:00): Koushil Sreenath, Marco Pavone, Monroe Kennedy, Allison Okamura, Ken Goldberg, Chelsea Finn, Sergey Levine, Pieter Abbeel.</p>
 		<p>Faculty talks #2 (10:00 -- 11:00): Grace Gao, Dejan Milutinovic, Sergey Levine, Hannah Stuart, Anca Dragan, Ricardo Sanfelice, Ron Fearing.</p>
 		<p>Faculty talks #3 (12:15 -- 13:15): Jeannette Bohg, Silvio Savarese, Mykel Kochenderfer, Mark Mueller, Dorsa Sadigh, Steve Collins, Mac Schwager, Alexandre Bayen.</p>
 		<!--<p>Industry & student spotlight talks #1 (10:00-10:30): Intuitive, Auris, Zoox, Toyota Research Institute.</p>
