schedule update - Introduction

--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@ tr:nth-child(even) {
             <table>
               <tbody>
                 <tr>
+                  <td width="50%">07:45-08:00</td>
+                  <td colspan="2"> Introduction</td>
+                </tr>
+              
+                <tr>
                   <td width="50%">08:00-09:00</td>
                   <td colspan="2"> Faculty Talks #1</td>
                 </tr>
