baidu link update

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ tr:nth-child(even) {
 		
 				<div class="col-md-12">
                 <a href="https://aurishealth.com/"><img src="./img/auris.png" height="100" align="center"></a>
-                <a href="https://research.baidu.com/"><img src="./img/Baidu.svg" height="100" align="center"></a>
+                <a href="http://research.baidu.com/"><img src="./img/Baidu.svg" height="100" align="center"></a>
                 <a href="https://google.com/"><img src="./img/google.png" height="100" align="center"></a><br /><br />
                 <a href="https://intuitive.com/"><img src="./img/intuitive.jpg" height="100" align="center"></a>
                 <a href="https://tri.global/"><img src="./img/tri_wide.png" height="100" align="center"></a>
