keynote talk info

--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@ tr:nth-child(even) {
 		<!--<p>Industry & student spotlight talks #1 (10:00-10:30): Intuitive, Auris, Zoox, Toyota Research Institute.</p>
 		<p>Industry & student spotlight talks #2 (14:00-14:30): Waymo, Google, Baidu, Skydio.</p>-->
 		
+        <p class="lead"><strong>Keynote Talk by <a href="https://people.csail.mit.edu/brooks/">Rodney Brooks</a>:</strong>&nbsp;</p>
+        <p><strong>Title:</strong> Robotics Research Methodology Aimed at Start Ups rather than Academia<br />
+        <p><strong>Abstract:</strong> Academia has ways of evaluating robotics research results which are not necessarily aligned with how useful those results will be in turning them into a successful startup. Some of the most difficult technical challenges at startups will never be accepted as academic research, even though they can be incredibly challenging. But there are ways to tilt academic research projects in ways which will make the results much more useful to startups, especially if the researcher becomes one of the start up founders.<br />
+        <p><strong>Speaker Bio:</strong> Rodney Brooks is the Panasonic Professor of Robotics (emeritus) at MIT.  PhD: Stanford. Post-docs: CMU & MIT. Faculty: Stanford & MIT. Director MIT AI Lab and then CSAIL until 2007. Seven startups including iRobot: tens of millions robots in the home, thousands in both the military and factories. Now CTO of Robust.AI, and simultaneously writing a deeply academic book on how AI and neuroscience might still be in their phlogiston phase in a hangover from 1945-1965.
 			
 			
         </div>
