--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@ tr:nth-child(even) {
 		
 		<p>The tentative list of speakers for each talk session is:</p>
 		<p>Faculty talks #1 (08:00 -- 09:00): Pieter Abbeel, Koushil Sreenath, Marco Pavone, Ken Goldberg, Allison Okamura, Chelsea Finn, Monroe Kennedy.</p>
-		<p>Faculty talks #2 (10:00 -- 11:00): Grace Gao, Sergey Levine, Dejan Milutinovic, Anca Dragan, Ricardo Sanfelice, Hannah Stuart, Ron Fearing.</p>
-		<p>Faculty talks #3 (12:15 -- 13:15): Jeannette Bohg, Mykel Kochenderfer, Silvio Savarese, Mark Mueller, Mac Schwager, Alexandre Bayen, Dorsa Sadigh.</p>
+		<p>Faculty talks #2 (10:00 -- 11:00): Grace Gao, Mark Mueller, Dejan Milutinovic, Anca Dragan, Ricardo Sanfelice, Hannah Stuart, Ron Fearing.</p>
+		<p>Faculty talks #3 (12:15 -- 13:15): Jeannette Bohg, Mykel Kochenderfer, Silvio Savarese, Sergey Levine, Mac Schwager, Alexandre Bayen, Dorsa Sadigh.</p>
 		<!--<p>Industry & student spotlight talks #1 (10:00-10:30): Intuitive, Auris, Zoox, Toyota Research Institute.</p>
 		<p>Industry & student spotlight talks #2 (14:00-14:30): Waymo, Google, Baidu, Skydio.</p>-->
 		
