navigate-up button appearance

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <!--<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
      <title>Bay Area Robotics Symposium 2020</title>
 
     <!-- web-fonts -->
@@ -556,7 +557,7 @@ tr:nth-child(even) {
 
 
 
-    <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+    <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 
             <!-- .row-->
 
