schedule update -- jeannette bohg

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ tr:nth-child(even) {
       <div class="col-md-12">
         <h2>Registration</h2>
         BARS will be open to everyone this year, without any registration! The participants can attend the event through the <a class="page-scroll" href="#section-live-stream">Live Stream</a> below, and ask their questions to the speakers through the live chat.<br />
-        A Slack workspace will also be active during the event for offline discussions. The information about this workspace will be shared on the event day through this web page.
+        A Slack workspace will also be active during and after the event for offline discussions. The information about this workspace will be shared on the event day through this web page.
         <!--<p class="lead">Tickets can be bought <a href="#"><u>here</u></a>.</p>-->
       </div>
     </div>
@@ -237,7 +237,7 @@ tr:nth-child(even) {
 		<p>The tentative list of speakers for each talk session is:</p>
 		<p>Faculty talks #1 (08:00 -- 09:00): Pieter Abbeel, Koushil Sreenath, Dorsa Sadigh, Ken Goldberg, Allison Okamura, Chelsea Finn, Monroe Kennedy.</p>
 		<p>Faculty talks #2 (10:00 -- 11:00): Grace Gao, Mark Mueller, Dejan Milutinovic, Anca Dragan, Ricardo Sanfelice, Hannah Stuart, Ron Fearing.</p>
-		<p>Faculty talks #3 (12:15 -- 13:15): Jeannette Bohg, Mykel Kochenderfer, Silvio Savarese, Sergey Levine, Mac Schwager, Alexandre Bayen, Marco Pavone.</p>
+		<p>Faculty talks #3 (12:15 -- 13:15): Mykel Kochenderfer, Silvio Savarese, Sergey Levine, Mac Schwager, Alexandre Bayen, Marco Pavone.</p>
 		<!--<p>Industry & student spotlight talks #1 (10:00-10:30): Intuitive, Auris, Zoox, Toyota Research Institute.</p>
 		<p>Industry & student spotlight talks #2 (14:00-14:30): Waymo, Google, Baidu, Skydio.</p>-->
 		
