--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ tr:nth-child(even) {
         <div class="col-md-10">
           <h2 id="scroll_about">About</h2>
 			
-          <p class="lead">The 2020 Bay Area Robotics Symposium aims to bring together roboticists from the Bay Area. The program will consist of a mix of faculty, student and industry presentations. Stay tuned for more details.<!--For more details, see the event <a class="page-scroll" href="#section-schedule">schedule</a>.<br>-->
+          <p class="lead">The 2020 Bay Area Robotics Symposium aims to bring together roboticists from the Bay Area. The program will consist of a mix of faculty, student and industry presentations.<br>Link for Slack channel: <a href="https://join.slack.com/t/bars2020/shared_invite/zt-it0gucip-lqU3ISmwJ~koyVb0rXaaNQ">https://join.slack.com/t/bars2020/shared_invite/zt-it0gucip-lqU3ISmwJ~koyVb0rXaaNQ</a>.<br>
           </p>
           <p class="lead"> <strong>Faculty Organizers:</strong>&nbsp;</p>
           <p class="lead"><a class="page-scroll" href="#section-contact">Dorsa Sadigh</a> (Stanford) and <a class="page-scroll" href="#section-contact">Mark Mueller</a> (UC Berkeley)<strong><br>
